--- a/static/questions-en.html
+++ b/static/questions-en.html
@@ -8,28 +8,28 @@
 <form action="/answer" method="post">
 <h1>Questions</h1>
 <h3>What's your nickname? (to find your pattern later on)</h3>
-    <input type="text" name="nickname"><br>
+    <input type="text" name="nickname" required><br>
 <h3>1. What‘s your first name?</h3>
-    <input type="text" name="q1"><br>
+    <input type="text" name="q1" required><br>
 <h3>2. How old are you?</h3>
-    <input type="text" name="q2"><br>
+    <input type="text" name="q2" required><br>
 <h3>3. On a scale from 1(=sad) to 10 how happy are you?</h3>
-    <input type="text" name="q3"><br>
+    <input type="text" name="q3" required><br>
 <h3>4. On a scale from 1(=not at all) to 10 how important is it to you what others think of you?</h3>
-    <input type="text" name="q4"><br>
+    <input type="text" name="q4" required><br>
 <h3>5. How many countries have you been to? (including germany)</h3>
-    <input type="text" name="q5"><br>
+    <input type="text" name="q5" required><br>
 <h3>6. How many siblings do you have?</h3>
-    <input type="text" name="q6"><br>
+    <input type="text" name="q6" required><br>
 <h3>7. On a scale from 1(=not at all) to 10 how courageous are you?</h3>
-    <input type="text" name="q7"><br>
+    <input type="text" name="q7" required><br>
 <h3>8. Are you in love?</h3>
-    <input type="radio" name="q8" value="yes"> Yes
+    <input type="radio" name="q8" value="yes" required> Yes
     <input type="radio" name="q8" value="no"> No <br>
 <h3>9. How many hours did you sleep last night?</h3>
-    <input type="text" name="q9"><br>
+    <input type="text" name="q9" required><br>
 <h3>10. On a scale from 1(=not at all) to 10 how much do you like your body?</h3>
-    <input type="text" name="q10"><br>
+    <input type="text" name="q10" required><br>
 
 <p>
 <input type="submit" value="Submit">
