--- a/static/questions-de.html
+++ b/static/questions-de.html
@@ -8,28 +8,28 @@
 <form action="/answer" method="post">
 <h1>Fragebogen</h1>
 <h3>Wie ist dein Nickname? (um dein Muster wieder zu finden)</h3>
-    <input type="text" name="nickname"><br>
+    <input type="text" name="nickname" required><br>
 <h3>1. Wie ist dein Vorname?</h3>
-    <input type="text" name="q1"><br>
+    <input type="text" name="q1" required><br>
 <h3>2. Wie alt bist du?</h3>
-    <input type="text" name="q2"><br>
+    <input type="text" name="q2" required><br>
 <h3>3. Auf einer Skala von 1(=traurig) bis 10 wie glücklich bist du gerade?</h3>
-    <input type="text" name="q3"><br>
+    <input type="text" name="q3" required><br>
 <h3>4. Auf einer Skala von 1(=gar nicht) bis 10, wie wichtig ist es dir was Andere von dir denken? </h3>
-    <input type="text" name="q4"><br>
+    <input type="text" name="q4" required><br>
 <h3>5. In wieviel Laendern warst du? (Deutschland eingeschlossen)</h3>
-    <input type="text" name="q5"><br>
+    <input type="text" name="q5" required><br>
 <h3>6. Wie viele Geschwister hast du?</h3>
-    <input type="text" name="q6"><br>
+    <input type="text" name="q6" required><br>
 <h3>7. Auf einer Skala von 1(=gar nicht) bis 10, wie Mutig bist du?</h3>
-    <input type="text" name="q7"><br>
+    <input type="text" name="q7" required><br>
 <h3>8. Bist du verliebt?</h3>
-    <input type="radio" name="q8" value="yes"> Yes
+    <input type="radio" name="q8" value="yes" required> Yes
     <input type="radio" name="q8" value="no"> No <br>
 <h3>9. Wie viele Stunden hast du letzte Nacht geschlafen?</h3>
-    <input type="text" name="q9"><br>
+    <input type="text" name="q9" required><br>
 <h3>10. Auf einer Skala von 1(=gar nicht) bis 10, wie sehr magst du deinen Koerper?</h3>
-    <input type="text" name="q10"><br>
+    <input type="text" name="q10" required><br>
 
 <p>
 <input type="submit" value="Submit">
